other-vpol/ensure-readonly-hostpath/.kyverno-test/exception-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: exception-hostpath
spec:
  containers:
  - name: test
    image: busybox
    volumeMounts:
    - name: foo
      mountPath: /host
  volumes:
  - name: foo
    hostPath:
      path: /var/lib
