other-vpol/ensure-readonly-hostpath/.kyverno-test/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: ensure-readonly-hostpath
policies:
- ../ensure-readonly-hostpath.yaml
resources:
- exception-pod.yaml
- good-pod-01.yaml
- bad-pod-01.yaml
exceptions:
- exceptions.yaml
results:
- isValidatingPolicy: true
  kind: Pod
  policy: ensure-readonly-hostpath
  resources:
  - exception-hostpath
  result: pass
- isValidatingPolicy: true
  kind: Pod
  policy: ensure-readonly-hostpath
  resources:
  - bad-pod-01
  result: fail
- isValidatingPolicy: true
  kind: Pod
  policy: ensure-readonly-hostpath
  resources:
  - good-pod-01
  result: pass
